client/assets/scss/app.scss
@import "settings";
@import "foundation";


.button.info{
  color: white;
}
.panel-right{
  h1,h2,h3,h4,h5,h6{
    color: white;
  }
  color: white;
  padding: rem-calc(12);
  padding-top: 2rem;
  p{
    font-size: rem-calc(19);
  }
}
.main-icon{
  max-width: 60%;
}
.primary-content{
  height: 100vh;
  background-color: lighten($primary-color, 15);
  img{
    padding-top: 22.5vh;
  }
  h1{
    margin-top: 2vh;
    text-transform: uppercase;
    font-size: rem-calc(32);
    line-height: rem-calc(30);
  }
  h4{
   font-size: rem-calc(18);
  }
  span.logo-text{
    font-size: rem-calc(42);
    font-weight: 900;
    letter-spacing: 2px;
  }
}
.display-content{
  img{
    max-height: 70vh;
    margin-top: 15vh;
    width: auto;
  }
}
#takoTalk{
  .display-content{
    img{
      margin-top: 10vh;
    }
  }
}

.about-content{
  height: 100vh;
  @include breakpoint(medium up){
    padding-right: 10vh;
  }
  h3{
    margin-top: 30vh;
    padding: 3vh;
  }
  .button{
    border-radius: rem-calc(8);
  }
}

.main-page-button{
  margin-top: 2rem;
  margin-right: auto;
  margin-left: auto;
  border-radius: rem-calc(8);
}

.weird-button{
  margin-top: 1rem;
  border-radius: 3% 42% 18% 38%;
  box-shadow: 0px 0 4px rgba(black, 0.25);
}

.close-button{
  color: white;
}

.super-round{
  box-shadow: 0px 0px 2px #333;
  position: relative;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  color: white;
  font-size: rem-calc(22);
  border: 8px solid white;
  span.text{
    position: absolute;
    top: 50%;
    -ms-tranform:      translate3d(-50%, -50%, 0);
    -webkit-transform: translate3d(-50%, -50%, 0);
    transform:         translate3d(-50%, -50%, 0);
  }
}

